--- a/index.html
+++ b/index.html
@@ -34,6 +34,43 @@
                 <br>
             </ul>
         </main>
+        <section class="first">
+            <article>
+                <h2> 
+                    About Me
+                </h2>
+                <h3 class="help"> Education</h3>
+                <ul>
+                    <li>Bachelors degree in Health Administration and Management</li>
+                    <li>U.S Military certified Linguist</li>
+                </ul>
+                <h3 class="help2"> Work Experience</h3>
+                <ul class = "jobs">
+                    <li> Military Linguist and Cultural Advisor</li>
+                    <li> Reimbursement Counselor</li>
+                </ul>
+            </article>
+        </section>
+
+    </section class ="top10">
+        <article>
+            <h3>
+                My Top 10 Countries
+            </h3>
+            <ol>
+                <li>France</li>
+                <li>Switzerland</li>
+                <li>Ireland</li>
+                <li>Scotland</li>
+                <li>Italy</li>
+                <li>Spain</li>
+                <li>United Kingdom</li>
+                <li>Netherlands</li>
+                <li>Monaco</li>
+                <li>Sweden</li>
+            </ol>
+        </article>
+        </body>
         <footer>
             &copy; 2023 Sarah Mahdi
         </footer>
