--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <section class="first">
             <article>
                 <h2> 
-                    About Me
+                    More About Me
                 </h2>
                 <h3 class="help"> Education</h3>
                 <ul>
